examples/solidity/bad/notests.sol
//pragma solidity ^0.4.24;

contract Abstract {
  function f() pure public returns (int) {return 0;}
}
